# Person-Presence-Detection-on-Google-Coral-Micro

./: .gitignore  README.md  build.sh  copy_from_master.sh  copy_to_master.sh  flash.sh  init.sh  monitor.sh
notes/: Assignment  Detection.md  Models.md  Possible hardware.md  Problems.md  TODOs.md  Testing.md
notes/.obsidian/: workspace.json
scripts/: build.sh  copy_from_master.sh  copy_to_master.sh  flash.sh  init.sh  monitor.sh  run_all.sh
src/: AwaitQueue.hpp  CMakeLists.txt  ConfigManager.hpp  ipc_message.hpp  main.cc  main.cpp  main_m4.cpp  post_http_server.hpp  structs.hpp
src/libs/: Detector.cc  Detector.hh  http_server.cc
src/local_libs/: http_server.h
src/web/: coral_micro_camera.html  page.html
testing/: capture.py  ssd_det_opt_sum.txt  ssd_det_sum.txt  ssd_det_tpu_sum.txt  ssd_net_opt_sum.txt  ssd_net_sum.txt  ssd_net_tpu_sum.txt  yolo_float_opt_sum.txt  yolo_float_sum.txt  yolo_int_opt_sum.txt  yolo_int_sum.txt  yolo_mcu_sum.txt  yolo_tpu_sum.txt
testing/camera_testing/: CMakeLists.txt  main.cc
testing/camera_testing/libs/: http_server.h
testing/camera_testing/web/: coral_micro_camera.html
